SenseAbility.cydsn/CortexM0/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 03/23/2017 10:16:02 Project: SenseAbility, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\ddemidov\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\ddemidov\Documents\PSoC Creator\acn-embedded\SenseAbility.cydsn\SenseAbility.cyprj" -d CY8C4247LQI-BL483 -s "C:\Users\ddemidov\Documents\PSoC Creator\acn-embedded\SenseAbility.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
Warning: sta.M0019: SenseAbility_timing.html: Warning-1366: Setup time violation found in a path from clock ( CyHFCLK ) to clock ( CyHFCLK ). (File=C:\Users\ddemidov\Documents\PSoC Creator\acn-embedded\SenseAbility.cydsn\SenseAbility_timing.html)
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I..\acn-sdk-c -I..\acn-sdk-c\include -I..\acn-sdk-c\src\wolfSSL -I..\acn-sdk-c\src\wolfSSL\wolfssl -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -D __senseability__ -Wall -ffunction-sections -Os -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
In file included from ..\acn-sdk-c\include/time/time.h:12:0,
                 from .\main.c:18:
..\acn-sdk-c\include/config.h:192:2: error: #error "set the API key"
 #error "set the API key"
  ^
..\acn-sdk-c\include/config.h:195:2: error: #error "set the SECRET key"
 #error "set the SECRET key"
  ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/23/2017 10:16:12 ---------------
